update readme and add some configs

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,12 @@
 [pytest]
 minversion = 6.0
 addopts = -q
-markers =
-    integration: mark a test as an integration test
-    unit: mark a test as a unit test
+; markers =
+;     integration: mark a test as an integration test
+;     unit: mark a test as a unit test
+
+testpaths = tests/
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+norecursedirs = .venv venv data datasets notebooks checkpoints models images
