--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ astunparse==1.6.3
 certifi==2025.10.5
 charset-normalizer==3.4.4
 comm==0.2.3
-contourpy==1.3.3
+#contourpy==1.3.3
 cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
