--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ google-pasta==0.2.0
 grpcio==1.74.0
 h5py==3.14.0
 idna==3.11
-iniconfig==2.3.0
+#iniconfig==2.3.0
 ipykernel==7.1.0
 ipython==9.6.0
 ipython_pygments_lexers==1.1.1
