--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,19 @@
-absl-py==2.3.1
-appnope==0.1.4
-asttokens==3.0.0
-astunparse==1.6.3
-certifi==2025.10.5
-charset-normalizer==3.4.4
-comm==0.2.3
-#contourpy==1.3.3
-cycler==0.12.1
-debugpy==1.8.17
-decorator==5.2.1
-executing==2.2.1
-flatbuffers==25.2.10
-fonttools==4.60.1
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.74.0
-h5py==3.14.0
-idna==3.11
-#iniconfig==2.3.0
-ipykernel==7.1.0
-ipython==9.6.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
-joblib==1.5.1
-jupyter==1.1.1
-jupyter_client==8.6.3
-jupyter_core==5.9.1
-jupyterlab==4.4.5
-jupyterlab_server==2.27.3
-keras==3.12.0
-kiwisolver==1.4.9
-libclang==18.1.1
-Markdown==3.9
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-matplotlib==3.10.5
-matplotlib-inline==0.2.1
-mdurl==0.1.2
-ml_dtypes==0.5.3
-#-e git+https://github.com/rykerdolese/Data-Science-and-Machine-Learning.git@ab8b71214c9e5c4fa6a084427bbddd217c7ce74c#egg=mlpackage
-namex==0.1.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==7.4.5
-notebook_shim==0.2.4
+# requirements-ci.txt — only packages needed to run tests
+pytest==8.4.2
 numpy==2.3.2
-opt_einsum==3.4.0
-optree==0.17.0
-packaging==25.0
 pandas==2.3.1
-parso==0.8.5
-patsy==1.0.1
-pexpect==4.9.0
-pillow==12.0.0
-platformdirs==4.5.0
-pluggy==1.6.0
-prompt_toolkit==3.0.52
-protobuf==6.31.1
+scipy==1.16.1
+scikit-learn==1.7.2
+matplotlib==3.10.5
+seaborn==0.13.2
+requests==2.32.5
+joblib==1.5.1
 psutil==7.1.2
-ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.19.2
+pyzmq==27.1.0
+packaging==25.0
 pyparsing==3.2.3
-pytest==8.4.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
-pyzmq==27.1.0
-requests==2.32.5
-rich==14.2.0
-scikit-learn==1.7.2
-scipy==1.16.1
-seaborn==0.13.2
-setuptools==80.9.0
-six==1.17.0
-stack-data==0.6.3
-statsmodels==0.14.5
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorflow==2.20.0
-termcolor==3.2.0
-threadpoolctl==3.6.0
-tornado==6.5.2
-traitlets==5.14.3
 typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-wcwidth==0.2.14
-Werkzeug==3.1.3
-wheel==0.45.1
-wrapt==2.0.0
+# small extras for test reporting
+rich==14.2.0
