--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,10 @@ jobs:
           pip install pytest # Install pytest
           pip install -r requirements.txt # Install other project dependencies if you have a requirements.txt
 
+      - name: Install mlpackage
+        run: |
+          pip install -e .
+          
       - name: Run Pytest tests
         run: |
           pytest
